feat(build,core): wire Gradle build + implement aetherium-core baseline
Stand up the multi-project Gradle build and the leaf API module.

Build system:
- Gradle 8.8 (Kotlin DSL), committed wrapper, centralized version catalog
- Java 21 toolchain pinned to local GraalVM (no JDK auto-download)
- --enable-preview globally (compile/test/javadoc/run) for the FFM API
 (verified: preview class-file minor 0xFFFF; runtime reports preview enabled)
- aetherium-loader packaged as a drop-in NeoForge 1.21.1 mod: templated
 neoforge.mods.toml, FMLModType=MOD, non-invasive deps (ordering=NONE)
- offline-capable (cached ASM 9.8); ./gradlew projects & build are green

aetherium-core (leaf, no internal deps — verified):
- Symbol Manifest: Symbol, SymbolManifest+Builder, ArraySymbolManifest (O(1) byId)
- Capability/Fallback registry: CapabilityTier (FFM>JNI>PURE_JAVA>DISABLED),
 Capability, CapabilityProvider, FallbackChain, CapabilityRegistry
- Error model: Diagnostic, AetheriumException
- Hardware/Compute groundwork: OffHeapAllocator (FFM Arena), ComputePipeline,
 ComputeCapabilities

Docs: bilingual docs/{en,ru}/build-system.md; CHANGELOG updated.